--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -59,9 +59,11 @@
   display: block;
   list-style-type: none;
   white-space: nowrap;
+  font-size: 1.2em;
 
   &--lg {
     padding-right: 2em;
     font-weight: 700;
+    font-size: 1.5em;
   }
 }
